# FPmax-LIB

./: CMakeLists.txt  LICENSE  README.md
src/: buffer.cpp  buffer.h  common.h  data.cpp  data.h  fp_node.cpp  fp_node.h  fp_tree.cpp  fp_tree.h  fpmax.cpp  fpmax.h  fsout.cpp  fsout.h  makefile
test/test-data/: transactions.txt
test/test-src/: CMakeLists.txt  test.cpp
